--- a/ex6/src/App.css
+++ b/ex6/src/App.css
@@ -1,15 +1,18 @@
 .container {
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: 1fr 1fr;
+}
+
+.container > div {
+  border: 1px solid black;
 }
 
 .data {
-  border: 1px solid black;
-  height: 100%;
-  padding: 0;
+  display: grid;
+  grid-template-columns: auto;
+  row-gap: 50px;
 }
 
-.bar-container {
+.data > div {
   border: 1px solid black;
-  height: 100%;
 }
