--- a/ex5/src/App.css
+++ b/ex5/src/App.css
@@ -1,28 +1,14 @@
-.App {
-  text-align: center;
+.input-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
 }
 
-.input-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 20px;
+input {
+    width: 600px;
 }
 
 .search-bar {
-  margin: 10px;
-}
-
-.btn {
-  padding: 10px 20px;
-  background-color: #4472c4;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.leaflet-container {
-  height: 600px;
-  width: 100%;
+    margin: 10px;
 }
