--- a/ex3/src/App.css
+++ b/ex3/src/App.css
@@ -26,7 +26,6 @@
   background-size: cover;
 }
 .controler {
-  border: 1px solid blue;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -37,6 +36,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  height: 100%;
 }
 .controler > div > div {
   font-size: 35px;
@@ -50,4 +50,13 @@
   width: 250px;
   height: 75px;
   margin: auto auto 0 auto;
+}
+
+.move-data {
+  width: 100%;
+  height: 80%;
+}
+
+form {
+  height: 100%;
 }
