--- a/ex4/src/App.css
+++ b/ex4/src/App.css
@@ -1,5 +1,4 @@
 .container {
-  border: 1px solid black;
   margin: 15px;
   display: grid;
   grid-template-columns: auto 1fr;
@@ -39,14 +38,30 @@
   display: flex;
 }
 
-.controler {
-  border: 1px solid black;
-  display: grid;
-  grid-template-columns: auto;
+.form {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-items: center;
+}
+
+.btn-div {
+  display: flex;
+  justify-content: center;
+}
+
+textarea {
+  width: 100%;
+  height: 85%;
 }
 
 .run-button {
-  background-color: rgb(95, 212, 95);
+  background-color: #00b050;
   color: white;
-  
+  width: 30%;
+  height: 100%;
+  min-height: 75px;
+  border: none;
+  border-radius: 5px;
+  font-size: large;
 }
